--- a/src/app/client/dialogs/choose-delivery-dialog/choose-delivery-dialog.component.html
+++ b/src/app/client/dialogs/choose-delivery-dialog/choose-delivery-dialog.component.html
@@ -1,4 +1,8 @@
 <div class="deliveries-container">
+  <div *ngIf="data.userCountry.name">
+    Доставка в {{data.userCountry.name}}
+  </div>
+
   <div class="delivery-row title-row">
     <div class="radio-column">
     </div>
