--- a/src/app/client/navigation-bar/navigation-bar.component.html
+++ b/src/app/client/navigation-bar/navigation-bar.component.html
@@ -1,6 +1,10 @@
 <div class="nav-bar">
   <div class="logo-container elem">
-    <a href="" class="logo">Andromeda</a>
+    <a href="" class="logo">
+<!--      <img src="https://img.icons8.com/material/46/000000/mars-symbol.png"/>-->
+      Andromeda
+<!--      <img src="https://img.icons8.com/material/46/000000/mars-symbol.png"/>-->
+    </a>
   </div>
   <div class="search-container">
     <div class="search-input-container">
