--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,7 +52,7 @@ body {
   overflow: visible;
 }
 
-$footerHeight: 60px;
+$footerHeight: 80px;
 
 .index-content-holder {
   min-height: 100%;
@@ -86,3 +86,12 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+.icons-link{
+  font-size: 13px;
+  text-decoration: none;
+  margin-top: 5px;
+}
+
+
+
