--- a/src/styles/input.scss
+++ b/src/styles/input.scss
@@ -67,7 +67,16 @@
 }
 /* стили для чекбокса, находящегося в состоянии disabled */
 .andro-checkbox:disabled+label::before {
-  background-color: #292b2d;
+  background-color: #ffffff;
+}
+
+.andro-checkbox:disabled:checked+label::before {
+  background-color: #e3e3e3;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='black' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
+}
+
+.andro-checkbox:disabled:not(:checked)+label::before {
+  background-color: #e7e4e4;
 }
 
 
