--- a/src/app/client/side-navigation-menu/side-navigation-menu.component.html
+++ b/src/app/client/side-navigation-menu/side-navigation-menu.component.html
@@ -98,7 +98,7 @@
       </div>
       <div class="link-title">Мій профіль</div>
     </div>
-    <div class="link" [routerLink]="" (click)="close()">
+    <div class="link" [routerLink]="'user/notifications'" (click)="close()">
       <div class="link-icon-container"><img src="https://img.icons8.com/material/24/000000/alarm.png"/>
       </div>
       <div class="link-title">Сповіщення</div>
