--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,6 +34,13 @@ body {
   text-decoration: none;
 }
 
+@media only screen and (max-width:500px) {
+  /* For mobile phones: */
+  .logo {
+    font-size: 30px;
+  }
+}
+
 .footer-logo {
   font-size: 20px;
 }
