--- a/src/app/client/side-navigation-menu/side-navigation-menu.component.html
+++ b/src/app/client/side-navigation-menu/side-navigation-menu.component.html
@@ -103,7 +103,7 @@
       </div>
       <div class="link-title">Сповіщення</div>
     </div>
-    <div class="link" [routerLink]="" (click)="close()">
+    <div class="link" [routerLink]="'user/history'" (click)="close()">
       <div class="link-icon-container"><img src="https://img.icons8.com/material/24/000000/clock--v1.png"/>
       </div>
       <div class="link-title">Останні переглянуті</div>
@@ -122,7 +122,7 @@
       <div class="link-icon-container"><img src="https://img.icons8.com/material/24/000000/purchase-order--v1.png"/></div>
       <div class="link-title">Мої замовлення</div>
     </div>
-    <div class="link" [routerLink]="" (click)="close()">
+    <div class="link" [routerLink]="'user/favorites'" (click)="close()">
       <div class="link-icon-container"><img src="https://img.icons8.com/material/24/000000/bookmark-outline.png"/></div>
       <div class="link-title">Збережені товари</div>
     </div>
