--- a/src/app/client/search/search.component.html
+++ b/src/app/client/search/search.component.html
@@ -88,7 +88,7 @@
               </g>
             </svg>
           </div>
-          <div (click)="makeRequestWithOtherSortType('statistics.creationDate', 'ASC')" class="sort-elem"
+          <div (click)="makeRequestWithOtherSortType('statistics.creationDate', 'DESC')" class="sort-elem"
                [ngClass]="{selected: sortType === 'statistics.creationDate'}">Новинки
           </div>
           <div (click)="makeRequestWithOtherSortType(null, 'ASC')" class="sort-elem"
