--- a/src/app/client/seller/seller-profile/seller-profile.component.html
+++ b/src/app/client/seller/seller-profile/seller-profile.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <span class="block-title">Мій профіль</span>
+  <span class="block-title">Профіль магазину</span>
   <div class="profile-block">
     <div class="seller-avatar-name-container">
       <div class="avatar-image-container">
@@ -63,5 +63,8 @@
 <!--      <div [innerHTML]="test"></div>-->
 
     </div>
+  </div>
+  <div class="block logout-block">
+    <button (click)="logoutButtonClick()" class="logout-button">Вийти</button>
   </div>
 </div>
