--- a/src/app/client/navigation-bar/navigation-bar.component.html
+++ b/src/app/client/navigation-bar/navigation-bar.component.html
@@ -1,9 +1,9 @@
 <div class="nav-bar">
   <div class="logo-container elem">
     <a href="" class="logo">
-<!--      <img src="https://img.icons8.com/material/46/000000/mars-symbol.png"/>-->
+      <!--      <img src="https://img.icons8.com/material/46/000000/mars-symbol.png"/>-->
       Andromeda
-<!--      <img src="https://img.icons8.com/material/46/000000/mars-symbol.png"/>-->
+      <!--      <img src="https://img.icons8.com/material/46/000000/mars-symbol.png"/>-->
     </a>
   </div>
   <div class="search-container">
@@ -15,15 +15,31 @@
     </div>
   </div>
   <div class="profile-container" *ngIf="isLogged">
-    <div class="message-container profile-button-container">
-      <img src="https://img.icons8.com/material-outlined/35/000000/message-group.png"/>
-    </div>
+    <!--    <div class="message-container profile-button-container">-->
+    <!--      <img src="https://img.icons8.com/material-outlined/35/000000/message-group.png"/>-->
+    <!--    </div>-->
 
-    <div class="notification-container profile-button-container">
-      <img src="https://img.icons8.com/material-outlined/35/000000/appointment-reminders--v1.png"/>
+    <div class="notification-container profile-button-container" (click)="navigateToNotifications()">
+      <div>
+        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+             width="35" height="35"
+             viewBox="0 0 172 172"
+             style=" fill:#000000;">
+          <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
+             stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none"
+             font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal">
+            <path d="M0,172v-172h172v172z" fill="none"></path>
+            <g fill="#000000">
+              <path
+                d="M86,14.33333c-5.934,0 -10.75,4.816 -10.75,10.75v4.98307c-18.54017,4.78017 -32.25,21.56943 -32.25,41.60026v43l-14.33333,14.33333v7.16667h114.66667v-7.16667l-14.33333,-14.33333v-43c0,-20.03083 -13.70983,-36.8061 -32.25,-41.58626v-4.99707c0,-5.934 -4.816,-10.75 -10.75,-10.75zM71.66667,143.33333c0,7.91917 6.42133,14.33333 14.33333,14.33333c7.912,0 14.33333,-6.42133 14.33333,-14.33333z"></path>
+            </g>
+          </g>
+        </svg>
+      </div>
+      <div class="overlay-notifications" *ngIf="newNotificationsCount !== ''">{{newNotificationsCount}}</div>
     </div>
-    <div  class="profile-button-container" *ngIf="userRole === 'ROLE_USER'" (click)="navigateToCart()">
-      <img  src="https://img.icons8.com/material-outlined/35/000000/shopping-cart--v1.png"/>
+    <div class="profile-button-container" *ngIf="userRole === 'ROLE_USER'" (click)="navigateToCart()">
+      <img src="https://img.icons8.com/material-outlined/35/000000/shopping-cart--v1.png"/>
     </div>
 
     <div class=" profile-button-container" (click)="openProfileMenu()">
@@ -34,7 +50,7 @@
     <div class="outside-menu" (click)="isOpenProfileMenu = false"
          [ngClass]="{opened_user_menu: isOpenProfileMenu}"></div>
     <div class="user-container-menu" id="user-container-menu" [ngClass]="{opened_user_menu: !isOpenProfileMenu}">
-      <div class="menu-item" [routerLink]="profileLink" (click)="openProfileMenu()">Мій профіль</div>
+      <div class="menu-item" (click)="openProfileMenu()">Мій профіль</div>
       <div class="menu-item" (click)="logOut()">Вийти</div>
     </div>
   </div>
@@ -42,7 +58,7 @@
   <div class="profile-container" *ngIf="!isLogged">
     <div class="profile-button-container" (click)="openLoginDialog()">
       <img class="user-container" src="https://img.icons8.com/metro/30/000000/alien.png"/>
-      <span class="login-button" >Увійти</span>
+      <span class="login-button">Увійти</span>
     </div>
   </div>
   <!--  <div>-->
