--- a/src/app/client/seller/advertisement-manage/advertisement-statistics/advertisement-statistics.component.html
+++ b/src/app/client/seller/advertisement-manage/advertisement-statistics/advertisement-statistics.component.html
@@ -1,1 +1,59 @@
-<p>advertisement-statistics works!</p>
+<div class="block">
+  <div class="statistic-block-title">
+    Товар додано {{statistics.creationDate}}, за цей час
+  </div>
+  <div class="statistic-element">
+    <div class="statistic-element-name">Відгуків </div>
+    <div class="statistic-element-value">{{statistics.feedbacks}}</div>
+  </div>
+  <div class="statistic-element">
+    <div class="statistic-element-name">Рейтинг </div>
+    <div class="statistic-element-value" *ngIf="statistics.rating === null">
+      Немає даних
+    </div>
+    <div class="statistic-element-value rating-view-element" *ngIf="statistics.rating !== null">
+      <app-rating-view [rating]="statistics.rating"></app-rating-view> {{statistics.rating}}
+    </div>
+  </div>
+  <div class="statistic-element">
+    <div class="statistic-element-name">Замовлень здійснено </div>
+    <div class="statistic-element-value">{{statistics.orders}}</div>
+  </div>
+  <div class="statistic-element">
+    <div class="statistic-element-name">Продано </div>
+    <div class="statistic-element-value">{{statistics.sold}} шт.</div>
+  </div>
+  <div class="statistic-element">
+    <div class="statistic-element-name">Додали до збережених </div>
+    <div class="statistic-element-value">{{statistics.likes}} користувач(ів)</div>
+  </div>
+  <div class="statistic-element">
+    <div class="statistic-element-name">Переглянуто </div>
+    <div class="statistic-element-value">{{statistics.views}} раз(ів)</div>
+  </div>
+</div>
+
+<div class="block" *ngIf="statistics.creationDate !== ''">
+  <div class="stat-date-container">Статистика за
+    <app-year-month-picker [startDate]="statistics.creationDate" (datePick)="changeMonthStatistics($event)"></app-year-month-picker></div>
+  <div class="statistic-element">
+    <div class="statistic-element-name">Відгуків </div>
+    <div class="statistic-element-value">{{monthStatistics.feedbacks}}</div>
+  </div>
+  <div class="statistic-element">
+    <div class="statistic-element-name">Замовлень здійснено </div>
+    <div class="statistic-element-value">{{monthStatistics.orders}}</div>
+  </div>
+  <div class="statistic-element">
+    <div class="statistic-element-name">Продано </div>
+    <div class="statistic-element-value">{{monthStatistics.sold}} шт.</div>
+  </div>
+  <div class="statistic-element">
+    <div class="statistic-element-name">Додали до збережених </div>
+    <div class="statistic-element-value">{{monthStatistics.inLikeList}} користувач(ів)</div>
+  </div>
+  <div class="statistic-element">
+    <div class="statistic-element-name">Переглянуто </div>
+    <div class="statistic-element-value">{{monthStatistics.views}} раз(ів)</div>
+  </div>
+</div>
