--- a/src/app/client/seller/seller-profile/seller-profile.component.scss
+++ b/src/app/client/seller/seller-profile/seller-profile.component.scss
@@ -49,6 +49,7 @@
 .seller-name{
   font-size: 30px;
   font-weight: 900;
+  text-align: center;
 }
 
 
@@ -137,4 +138,25 @@
 .seller-rating-position-value{
   padding-left: 10px;
   font-weight: 900;
+}
+
+.logout-block{
+  display: flex;
+  justify-content: flex-end;
+}
+
+.block {
+  padding: 20px;
+  background-color: #fff;
+  margin-top: 20px;
+}
+
+.logout-button{
+  font-size: 15px;
+  font-weight: 800;
+  padding: 5px 15px;
+  border-radius: 4px;
+  background-color: #fff;
+  border: 3px solid black;
+  cursor: pointer;
 }
