--- a/src/app/client/user/view-history/view-history.component.scss
+++ b/src/app/client/user/view-history/view-history.component.scss
@@ -205,9 +205,10 @@ $imgSide: 100px;
 
 .item-actions-container.column-container{
   //border-left: 1px solid #eee7e7;
-  padding-top: 5px;
-  width: 100%;
-  //display: flex;
+  padding-top: 10px;
+  width: 20%;
+  display: flex;
+  justify-content: flex-end;
   //align-items: center;
 }
 
@@ -257,7 +258,7 @@ $imgSide: 100px;
 .view-time-text{
   width: 100%;
   font-size: 13px;
-  font-weight: 800;
+  font-weight: 500;
   text-align: right;
   color: #b7acac;
 }
