--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
+
+
 
 * {
   padding: 0;
@@ -59,6 +62,14 @@ body {
   overflow: visible;
 }
 
+.image-dialog .mat-dialog-container {
+  padding: 5px;
+  //max-width: 100vw !important;
+  //max-width: 80% !important;
+  //max-width: 80%;
+  //margin: 0 auto;
+}
+
 $footerHeight: 80px;
 
 .index-content-holder {
@@ -68,9 +79,8 @@ $footerHeight: 80px;
 }
 
 .footer {
-  font-size: 15px;
-  font-weight: 300;
 
+  font-size: 12px;
   background-color: #f5f1f1;
 
   //position: absolute;
@@ -84,6 +94,10 @@ $footerHeight: 80px;
   height: $footerHeight;
 }
 
+.footer-text{
+  font-size: 13px;
+  font-weight: 300;
+}
 
 html, body {
   height: 100%;
@@ -95,7 +109,7 @@ body {
 }
 
 .icons-link{
-  font-size: 13px;
+  font-size: 11px;
   text-decoration: none;
   margin-top: 5px;
 }
